add form validation for log in and sign up

--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -5,8 +5,8 @@
 	</title>
 	<body class="d-flex flex-column h-100">
 		<head>
-			<link rel="stylesheet" href="ft_transcendence.css" />
-			<link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+			<link href="ft_transcendence.css" rel="stylesheet" />
+			<link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 			<script src="ft_transcendence.js">
 			</script>
 			<script src="popper/popper.min.js">
@@ -14,27 +14,27 @@
 			<script src="bootstrap/js/bootstrap.js">
 			</script>
 		</head>
-		<nav class="bg-body-tertiary border-bottom navbar navbar-expand-lg py-0 shadow-sm" id="toolbar">
+		<nav class="bg-body-tertiary border-bottom navbar navbar-expand-lg py-0 shadow-sm">
 			<div class="container-fluid px-0">
 				<div class="navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto">
 						<li class="border d-flex m-1 nav-item rounded text-nowrap" title="Leaderboard">
 							<img class="icon m-1" height="22" src="icons/games-highscores.svg">
-							<a class="active mx-1 my-auto nav-link p-0" aria-current="page">
+							<a aria-current="page" class="active mx-1 my-auto nav-link p-0">
 								Leaderboard
 							</a>
 						</li>
-						<li class="border d-flex m-1 nav-item rounded text-nowrap" data-bs-toggle="modal" data-bs-target="#about" onclick="openAbout()" title="About">
+						<li class="border d-flex m-1 nav-item rounded text-nowrap" data-bs-target="#about" data-bs-toggle="modal" onclick="openAbout()" title="About">
 							<img class="icon m-1" height="22" src="icons/help-about.svg">
-							<a class="active mx-1 my-auto nav-link p-0" aria-current="page">
+							<a aria-current="page" class="active mx-1 my-auto nav-link p-0">
 								About
 							</a>
 						</li>
 					</ul>
 					<ul class="navbar-nav">
-						<li class="border d-flex m-1 nav-item rounded text-nowrap" data-bs-toggle="modal" data-bs-target="#login" title="Log in">
+						<li class="border d-flex m-1 nav-item rounded text-nowrap" data-bs-target="#login" data-bs-toggle="modal" title="Log in">
 							<img class="icon m-1" height="22" src="icons/im-user.svg">
-							<a class="active mx-1 my-auto nav-link p-0" aria-current="page">
+							<a aria-current="page" class="active mx-1 my-auto nav-link p-0">
 								Log in
 							</a>
 						</li>
@@ -45,7 +45,7 @@
 		<div class="content d-flex h-100 m-auto" id="content">
 			<img class="border content-body m-1 rounded w-100" id="content-body" src="icons/placeholder.png">
 		</div>
-		<div class="modal fade" id="about" tabindex="-1" aria-labelledby="about" aria-hidden="true">
+		<div aria-hidden="true" aria-labelledby="about" class="modal fade" id="about" tabindex="-1">
 			<div class="modal-dialog modal-dialog-centered modal-lg">
 				<div class="bg-body border modal-content p-1 rounded">
 					<div class="modal-header p-1">
@@ -55,24 +55,24 @@
 					</div>
 					<div class="m-1 modal-body p-0">
 						<ul class="border-bottom-0 flex-nowrap ms-1 mt-1 nav nav-tabs position-relative rounded-top" id="myTab" role="tablist">
-							<li class="first nav-item" role="presentation">
-								<button class="active border-bottom-0 first m-0 nav-link position-relative px-1 py-0 text-dark" id="about-tab" data-bs-toggle="tab" data-bs-target="#about-tab-pane" type="button" role="tab" aria-controls="about-tab-pane" aria-selected="true">
+							<li class="nav-item" role="presentation">
+								<button aria-controls="about-tab-pane" aria-selected="true" class="active border-bottom-0 first m-0 nav-link position-relative px-1 py-0 text-dark" data-bs-target="#about-tab-pane" data-bs-toggle="tab" id="about-tab" role="tab" type="button">
 									About
 								</button>
 							</li>
 							<li class="nav-item" role="presentation">
-								<button class="border-bottom-0 m-0 nav-link position-relative px-1 py-0 rounded-0 text-dark" id="components-tab" data-bs-toggle="tab" data-bs-target="#components-tab-pane" type="button" role="tab" aria-controls="components-tab-pane" aria-selected="false">
+								<button aria-controls="components-tab-pane" aria-selected="false" class="border-bottom-0 m-0 nav-link position-relative px-1 py-0 rounded-0 text-dark" data-bs-target="#components-tab-pane" data-bs-toggle="tab" id="components-tab" role="tab" type="button">
 									Components
 								</button>
 							</li>
 							<li class="nav-item" role="presentation">
-								<button class="border-bottom-0 m-0 last nav-link position-relative px-1 py-0 text-dark" id="authors-tab" data-bs-toggle="tab" data-bs-target="#authors-tab-pane" type="button" role="tab" aria-controls="authors-tab-pane" aria-selected="false">
+								<button aria-controls="authors-tab-pane" aria-selected="false" data-bs-target="#authors-tab-pane" data-bs-toggle="tab" class="border-bottom-0 m-0 last nav-link position-relative px-1 py-0 text-dark" id="authors-tab" role="tab" type="button">
 									Authors
 								</button>
 							</li>
 						</ul>
 						<div class="tab-content" id="myTabContent">
-							<div class="active border mb-1 mx-1 p-1 position-relative rounded show tab-pane" id="about-tab-pane" role="tabpanel" aria-labelledby="about-tab" tabindex="0">
+							<div aria-labelledby="about-tab" class="active border mb-1 mx-1 p-1 position-relative rounded show tab-pane" id="about-tab-pane" role="tabpanel" tabindex="0">
 								<div class="d-flex">
 									<img class="inline-img" src="icons/openart-image_yBIl3nIg_1717776713014_raw.jpg">
 								</div>
@@ -91,7 +91,7 @@
 								<br>
 								This website exists to serve as an accurate retelling of the Great Avocado War of '24. As for who won the war? You will have to play to find out.
 							</div>
-							<div class="border mb-1 mx-1 p-1 position-relative rounded tab-pane" id="components-tab-pane" role="tabpanel" aria-labelledby="components-tab" tabindex="0">
+							<div aria-labelledby="components-tab" class="border mb-1 mx-1 p-1 position-relative rounded tab-pane" id="components-tab-pane" role="tabpanel" tabindex="0">
 								<b>
 									Bootstrap
 								</b>
@@ -100,7 +100,7 @@
 									Version 5.3.3
 								</i>
 								<br>
-								<button type="button" class="border borderless-button d-flex m-1 p-0 rounded" title="Visit component's homepage&#013;https://getbootstrap.com">
+								<button class="border borderless-button d-flex m-1 p-0 rounded" title="Visit component's homepage&#013;https://getbootstrap.com" type="button">
 									<a href="https://getbootstrap.com" target="_blank">
 										<img class="icon m-1" height="22" src="icons/globe.svg">
 									</a>
@@ -113,7 +113,7 @@
 									Version 5.0.6
 								</i>
 								<br>
-								<button type="button" class="border borderless-button d-flex m-1 p-0 rounded" title="Visit component's homepage&#013;https://www.djangoproject.com">
+								<button class="border borderless-button d-flex m-1 p-0 rounded" title="Visit component's homepage&#013;https://www.djangoproject.com" type="button">
 									<a href="https://www.djangoproject.com" target="_blank">
 										<img class="icon m-1" height="22" src="icons/globe.svg">
 									</a>
@@ -126,7 +126,7 @@
 									Version 16.3
 								</i>
 								<br>
-								<button type="button" class="border borderless-button d-flex m-1 p-0 rounded" title="Visit component's homepage&#013;https://www.postgresql.org">
+								<button class="border borderless-button d-flex m-1 p-0 rounded" title="Visit component's homepage&#013;https://www.postgresql.org" type="button">
 									<a href="https://www.postgresql.org" target="_blank">
 										<img class="icon m-1" height="22" src="icons/globe.svg">
 									</a>
@@ -139,13 +139,13 @@
 									Version r165
 								</i>
 								<br>
-								<button type="button" class="border borderless-button d-flex m-1 p-0 rounded" title="Visit component's homepage&#013;https://threejs.org">
+								<button class="border borderless-button d-flex m-1 p-0 rounded" title="Visit component's homepage&#013;https://threejs.org" type="button">
 									<a href="https://threejs.org" target="_blank">
 										<img class="icon m-1" height="22" src="icons/globe.svg">
 									</a>
 								</button>
 							</div>
-							<div class="border mb-1 mx-1 p-1 position-relative rounded tab-pane" id="authors-tab-pane" role="tabpanel" aria-labelledby="authors-tab" tabindex="0">
+							<div aria-labelledby="authors-tab" class="border mb-1 mx-1 p-1 position-relative rounded tab-pane" id="authors-tab-pane" role="tabpanel" tabindex="0">
 								<b>
 									Bruno Pierre Bouchard
 								</b>
@@ -154,7 +154,7 @@
 									Database
 								</i>
 								<br>
-								<button type="button" class="border borderless-button d-flex m-1 p-0 rounded" title="Visit contributor's homepage&#013;https://github.com/Nyonyx">
+								<button class="border borderless-button d-flex m-1 p-0 rounded" title="Visit contributor's homepage&#013;https://github.com/Nyonyx" type="button">
 									<a href="https://github.com/Nyonyx" target="_blank">
 										<img class="icon m-1" height="22" src="icons/globe.svg">
 									</a>
@@ -167,7 +167,7 @@
 									???
 								</i>
 								<br>
-								<button type="button" class="border borderless-button d-flex m-1 p-0 rounded" title="Visit contributor's homepage&#013;https://github.com/ShroomySquid">
+								<button class="border borderless-button d-flex m-1 p-0 rounded" title="Visit contributor's homepage&#013;https://github.com/ShroomySquid" type="button">
 									<a href="https://github.com/ShroomySquid" target="_blank">
 										<img class="icon m-1" height="22" src="icons/globe.svg">
 									</a>
@@ -180,7 +180,7 @@
 									Game
 								</i>
 								<br>
-								<button type="button" class="border borderless-button d-flex m-1 p-0 rounded" title="Visit contributor's homepage&#013;https://github.com/joeroeg">
+								<button class="border borderless-button d-flex m-1 p-0 rounded" title="Visit contributor's homepage&#013;https://github.com/joeroeg" type="button">
 									<a href="https://github.com/joeroeg" target="_blank">
 										<img class="icon m-1" height="22" src="icons/globe.svg">
 									</a>
@@ -193,7 +193,7 @@
 									Interface
 								</i>
 								<br>
-								<button type="button" class="border borderless-button d-flex m-1 p-0 rounded" title="Visit contributor's homepage&#013;https://github.com/lcouturi">
+								<button class="border borderless-button d-flex m-1 p-0 rounded" title="Visit contributor's homepage&#013;https://github.com/lcouturi" type="button">
 									<a href="https://github.com/lcouturi" target="_blank">
 										<img class="icon m-1" height="22" src="icons/globe.svg">
 									</a>
@@ -206,7 +206,7 @@
 									Backend
 								</i>
 								<br>
-								<button type="button" class="border borderless-button d-flex m-1 p-0 rounded" title="Visit contributor's homepage&#013;https://github.com/pierreolivierpaquet">
+								<button class="border borderless-button d-flex m-1 p-0 rounded" title="Visit contributor's homepage&#013;https://github.com/pierreolivierpaquet" type="button">
 									<a href="https://github.com/pierreolivierpaquet" target="_blank">
 										<img class="icon m-1" height="22" src="icons/globe.svg">
 									</a>
@@ -215,7 +215,7 @@
 						</div>
 					</div>
 					<div class="modal-footer p-1">
-						<button type="button" class="border button d-flex m-1 ms-auto rounded shadow-sm" data-bs-dismiss="modal">
+						<button class="border button d-flex m-1 ms-auto rounded shadow-sm" data-bs-dismiss="modal" type="button">
 							<img class="icon m-1" height="22" src="icons/window-close.svg">
 							<div class="my-auto">
 								Close
@@ -225,7 +225,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="modal fade" id="login" tabindex="-1" aria-labelledby="login" aria-hidden="true">
+		<div aria-hidden="true" aria-labelledby="login" class="modal fade" id="login" tabindex="-1">
 			<div class="modal-dialog modal-dialog-centered">
 				<div class="bg-body border modal-content p-1 rounded">
 					<div class="modal-header p-1">
@@ -233,46 +233,48 @@
 							Log in
 						</h2>
 					</div>
-					<div class="m-1 modal-body p-0">
-						<div class="border d-flex frame m-1 rounded">
-							<div class="d-flex flex-column">
-								<div class="my-auto pe-none text-end">
-									Username:
+					<form>
+						<div class="m-1 modal-body p-0">
+							<div class="border d-flex frame m-1 rounded">
+								<div class="d-flex flex-column">
+									<div class="my-auto pe-none text-end">
+										Username:
+									</div>
+									<div class="my-auto pe-none text-end">
+										Password:
+									</div>
 								</div>
-								<div class="my-auto pe-none text-end">
-									Password:
+								<div class="d-flex flex-column w-100">
+									<input aria-describedby="inputGroupPrepend2" class="border m-1 p-1 rounded w-100" required type="text">
+									<input aria-describedby="inputGroupPrepend2" class="border m-1 p-1 rounded w-100" required type="password">
 								</div>
-							</div>
-							<div class="d-flex flex-column w-100">
-								<input class="border m-1 p-1 rounded w-100" type="text">
-								<input class="border m-1 p-1 rounded w-100" type="password">
 							</div>
 						</div>
-					</div>
-					<div class="modal-footer p-1">
-						<button type="button" class="border button d-flex m-1 rounded shadow-sm text-nowrap" data-bs-target="#signup" data-bs-toggle="modal">
-							<img class="icon m-1" height="22" src="icons/list-add-user.svg">
-							<div class="my-auto pe-none">
-								Sign up
-							</div>
-						</button>
-						<button type="button" class="border button d-flex m-1 ms-auto rounded shadow-sm" data-bs-dismiss="modal">
-							<img class="icon m-1" height="22" src="icons/dialog-cancel.svg">
-							<div class="my-auto pe-none">
-								Cancel
-							</div>
-						</button>
-						<button type="button" class="border button d-flex m-1 pe-none rounded shadow-sm" disabled>
-							<img class="icon m-1" height="22" src="icons/dialog-ok-apply.svg">
-							<div class="my-auto">
-								OK
-							</div>
-						</button>
-					</div>
+						<div class="modal-footer p-1">
+							<button class="border button d-flex m-1 rounded shadow-sm text-nowrap" data-bs-target="#signup" data-bs-toggle="modal" type="button">
+								<img class="icon m-1" height="22" src="icons/list-add-user.svg">
+								<div class="my-auto pe-none">
+									Sign up
+								</div>
+							</button>
+							<button class="border button d-flex m-1 ms-auto rounded shadow-sm" data-bs-dismiss="modal" type="button">
+								<img class="icon m-1" height="22" src="icons/dialog-cancel.svg">
+								<div class="my-auto">
+									Cancel
+								</div>
+							</button>
+							<button class="border button d-flex m-1 rounded shadow-sm" type="submit">
+								<img class="icon m-1" height="22" src="icons/dialog-ok-apply.svg">
+								<div class="my-auto">
+									OK
+								</div>
+							</button>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
-		<div class="modal fade" id="signup" tabindex="-1" aria-labelledby="signup" aria-hidden="true">
+		<div aria-hidden="true" aria-labelledby="login" class="modal fade" id="signup" tabindex="-1">
 			<div class="modal-dialog modal-dialog-centered">
 				<div class="bg-body border modal-content p-1 rounded">
 					<div class="modal-header p-1">
@@ -280,40 +282,42 @@
 							Sign up
 						</h2>
 					</div>
-					<div class="m-1 modal-body p-0">
-						<div class="border d-flex frame m-1 rounded">
-							<div class="d-flex flex-column">
-								<div class="my-auto pe-none text-end">
-									Username:
+					<form>
+						<div class="m-1 modal-body p-0">
+							<div class="border d-flex frame m-1 rounded">
+								<div class="d-flex flex-column">
+									<div class="my-auto pe-none text-end">
+										Username:
+									</div>
+									<div class="my-auto pe-none text-end">
+										Password:
+									</div>
+									<div class="my-auto pe-none text-end text-nowrap">
+										Confirm password:
+									</div>
 								</div>
-								<div class="my-auto pe-none text-end">
-									Password:
+								<div class="d-flex flex-column w-100">
+									<input aria-describedby="inputGroupPrepend2" class="border m-1 p-1 rounded w-100" required type="text">
+									<input aria-describedby="inputGroupPrepend2" class="border m-1 p-1 rounded w-100" required type="password">
+									<input aria-describedby="inputGroupPrepend2" class="border m-1 p-1 rounded w-100" required type="password">
 								</div>
-								<div class="my-auto pe-none text-end text-nowrap">
-									Confirm password:
-								</div>
-							</div>
-							<div class="d-flex flex-column w-100">
-								<input class="border m-1 p-1 rounded w-100" type="text">
-								<input class="border m-1 p-1 rounded w-100" type="password">
-								<input class="border m-1 p-1 rounded w-100" type="password">
 							</div>
 						</div>
-					</div>
-					<div class="modal-footer p-1">
-						<button type="button" class="border button d-flex m-1 ms-auto rounded shadow-sm" data-bs-target="#login" data-bs-toggle="modal">
-							<img class="icon m-1" height="22" src="icons/dialog-cancel.svg">
-							<div class="my-auto">
-								Cancel
-							</div>
-						</button>
-						<button type="button" class="border button d-flex m-1 pe-none rounded shadow-sm" disabled>
-							<img class="icon m-1" height="22" src="icons/dialog-ok-apply.svg">
-							<div class="my-auto">
-								OK
-							</div>
-						</button>
-					</div>
+						<div class="modal-footer p-1">
+							<button class="border button d-flex m-1 ms-auto rounded shadow-sm" data-bs-target="#login" data-bs-toggle="modal" type="button">
+								<img class="icon m-1" height="22" src="icons/dialog-cancel.svg">
+								<div class="my-auto">
+									Cancel
+								</div>
+							</button>
+							<button class="border button d-flex m-1 rounded shadow-sm" type="submit">
+								<img class="icon m-1" height="22" src="icons/dialog-ok-apply.svg">
+								<div class="my-auto">
+									OK
+								</div>
+							</button>
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
