--- a/ft_transcendence.html
+++ b/ft_transcendence.html
@@ -18,23 +18,23 @@
 			<div class="container-fluid px-0">
 				<div class="navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto">
-						<li class="border d-flex m-1 nav-item rounded text-nowrap" title="Leaderboard">
-							<img class="icon m-1" height="22" src="icons/games-highscores.svg">
-							<a aria-current="page" class="active mx-1 my-auto nav-link p-0">
+						<li class="border d-flex nav-item py-1 rounded text-nowrap" title="Leaderboard">
+							<img class="icon" height="22" src="icons/games-highscores.svg">
+							<a aria-current="page" class="active ms-1 my-auto nav-link p-0">
 								Leaderboard
 							</a>
 						</li>
-						<li class="border d-flex m-1 nav-item rounded text-nowrap" data-bs-target="#about" data-bs-toggle="modal" onclick="openAbout()" title="About">
-							<img class="icon m-1" height="22" src="icons/help-about.svg">
-							<a aria-current="page" class="active mx-1 my-auto nav-link p-0">
+						<li class="border d-flex nav-item py-1 rounded text-nowrap" data-bs-target="#about" data-bs-toggle="modal" title="About">
+							<img class="icon" height="22" src="icons/help-about.svg">
+							<a aria-current="page" class="active ms-1 my-auto nav-link p-0">
 								About
 							</a>
 						</li>
 					</ul>
 					<ul class="navbar-nav">
-						<li class="border d-flex m-1 nav-item rounded text-nowrap" data-bs-target="#login" data-bs-toggle="modal" title="Log in">
-							<img class="icon m-1" height="22" src="icons/im-user.svg">
-							<a aria-current="page" class="active mx-1 my-auto nav-link p-0">
+						<li class="border d-flex nav-item py-1 rounded text-nowrap" data-bs-target="#login" data-bs-toggle="modal" title="Log in">
+							<img class="icon" height="22" src="icons/im-user.svg">
+							<a aria-current="page" class="active ms-1 my-auto nav-link p-0">
 								Log in
 							</a>
 						</li>
@@ -56,17 +56,17 @@
 					<div class="d-flex flex-column m-1 modal-body overflow-hidden p-0">
 						<ul class="border-bottom-0 flex-nowrap ms-1 mt-1 nav nav-tabs position-relative rounded-top" id="myTab" role="tablist">
 							<li class="nav-item" role="presentation">
-								<button aria-controls="about-tab-pane" aria-selected="true" class="active border-bottom-0 first m-0 nav-link position-relative px-1 py-0 text-dark" data-bs-target="#about-tab-pane" data-bs-toggle="tab" id="about-tab" role="tab" type="button">
+								<button aria-controls="about-tab-pane" aria-selected="true" class="active border-bottom-0 first m-0 nav-link position-relative px-1 text-dark" data-bs-target="#about-tab-pane" data-bs-toggle="tab" id="about-tab" role="tab" type="button">
 									About
 								</button>
 							</li>
 							<li class="nav-item" role="presentation">
-								<button aria-controls="components-tab-pane" aria-selected="false" class="border-bottom-0 m-0 nav-link position-relative px-1 py-0 rounded-0 text-dark" data-bs-target="#components-tab-pane" data-bs-toggle="tab" id="components-tab" role="tab" type="button">
+								<button aria-controls="components-tab-pane" aria-selected="false" class="border-bottom-0 m-0 nav-link position-relative px-1 rounded-0 text-dark" data-bs-target="#components-tab-pane" data-bs-toggle="tab" id="components-tab" role="tab" type="button">
 									Components
 								</button>
 							</li>
 							<li class="nav-item" role="presentation">
-								<button aria-controls="authors-tab-pane" aria-selected="false" data-bs-target="#authors-tab-pane" data-bs-toggle="tab" class="border-bottom-0 m-0 last nav-link position-relative px-1 py-0 text-dark" id="authors-tab" role="tab" type="button">
+								<button aria-controls="authors-tab-pane" aria-selected="false" class="border-bottom-0 m-0 last nav-link position-relative px-1 text-dark" data-bs-target="#authors-tab-pane" data-bs-toggle="tab" id="authors-tab" role="tab" type="button">
 									Authors
 								</button>
 							</li>
